--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -154,6 +154,10 @@
     transition: all 0.85s ease-in-out;
 }
 
+.show-navbar .slideInDown7 {
+    transition: all 0.9s ease-in-out;
+}
+
 .navbar-presentation {
     display: none;
 }
